sg_elb.tf
resource "aws_security_group" "elb_sg" {

  description = "elb sg"
  vpc_id      = aws_vpc.vpc-1.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.my_public_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
