splunk_servrs.tf
# Define Splunk Indexer inside the private subnet
#resource "aws_instance" "indexer" {
#  count         = 3
#  ami           = var.ami
#  instance_type = var.indexer
#  #key_name                    = "content-cyber-range-aws-key"
#  key_name                    = var.key
#  subnet_id                   = aws_subnet.internal-01.id
#  vpc_security_group_ids      = ["${aws_security_group.private_sg.id}"]
#  associate_public_ip_address = false
#  source_dest_check           = false
#  user_data                   = file("userdata_splunk_servers.sh")
#
#
#  tags = {
#    Name = "Indexer-${count.index + 1}"
#  }
#}
#
resource "aws_instance" "search_head" {
  ami                         = var.ami
  instance_type               = var.search_head
  key_name                    = var.key
  subnet_id                   = aws_subnet.vpc-1-sub-a.id
  private_ip                  = "10.10.1.100"
  vpc_security_group_ids      = ["${aws_security_group.splunk_pub_sg.id}"]
  availability_zone           = var.az1
  associate_public_ip_address = true
  source_dest_check           = false
  user_data                   = file("userdata_splunk_servers.sh")

  tags = {
    Name = "search_head"
  }
}

resource "aws_instance" "cluster_master" {
  ami                         = var.ami
  instance_type               = var.cluster_master
  key_name                    = var.key
  subnet_id                   = aws_subnet.vpc-1-sub-b.id
  private_ip                  = "10.10.2.100"
  vpc_security_group_ids      = ["${aws_security_group.private_sg.id}"]
  availability_zone           = var.az3
  associate_public_ip_address = false
  source_dest_check           = false
  user_data                   = file("userdata_splunk_servers.sh")

  tags = {
    Name = "cluster_master"
  }
}
